--- a/dev-docs/docs/@excalidraw/excalidraw/installation.mdx
+++ b/dev-docs/docs/@excalidraw/excalidraw/installation.mdx
@@ -1,16 +1,12 @@
 # Installation
 
-**Excalidraw** is published to npm as a component you can directly embed in your projects.
+**Excalidraw** is exported as a component to be directly embedded in your project.
 
-Using `npm`:
+Use `npm` or `yarn` to install the package.
 
 ```bash
 npm install react react-dom @excalidraw/excalidraw
-```
-
-or `yarn`:
-
-```bash
+# or
 yarn add react react-dom @excalidraw/excalidraw
 ```
 
@@ -20,15 +16,11 @@ yarn add react react-dom @excalidraw/excalidraw
 
 :::
 
-### Static assets
+#### Self-hosting fonts
 
-Excalidraw depends on assets such as localization files (if you opt to use them), fonts, and others.
+By default, excalidraw will try to load fonts used by Excalidraw from the [CDN](https://esm.run/@excalidraw/excalidraw/dist/prod).
 
-By default these assets are loaded from a public CDN [`https://unpkg.com/@excalidraw/excalidraw/dist/prod/`](https://unpkg.com/@excalidraw/excalidraw/dist/prod/), so you don't need to do anything on your end.
-
-However, if you want to host these files yourself, you can find them in your `node_modules/@excalidraw/excalidraw/dist` directory, in folders `excalidraw-assets` (for production) and `excalidraw-assets-dev` (for development).
-
-Copy these folders to your static assets directory, and add a `window.EXCALIDRAW_ASSET_PATH` variable in your `index.html` or `index.js` entry file pointing to your public assets path (relative). For example, if you serve your assets from the root of your hostname, you would do:
+For self-hosting purposes, you'll have to copy the content of the folder `node_modules/@excalidraw/excalidraw/dist/prod/fonts` to the path where your assets should be served from (i.e. `public/` directory in your project). In that case, you should also set `window.EXCALIDRAW_ASSET_PATH` to the very same path, i.e. `/` in case it's in the root:
 
 ```js
 window.EXCALIDRAW_ASSET_PATH = "/";
@@ -54,11 +46,10 @@ or, if you prefer the path to be dynamicly set based on the `location.origin`, y
 </Script>
 ```
 
-
 ### Dimensions of Excalidraw
 
 Excalidraw takes _100%_ of `width` and `height` of the containing block so make sure the container in which you render Excalidraw has non zero dimensions.
 
 ### Demo
 
-[Try here](https://codesandbox.io/s/excalidraw-ehlz3).
+Go to [CodeSandbox](https://codesandbox.io/s/excalidraw-ehlz3).
