--- a/dev-docs/docs/@excalidraw/excalidraw/development.mdx
+++ b/dev-docs/docs/@excalidraw/excalidraw/development.mdx
@@ -13,13 +13,13 @@ To start the example app using the `@excalidraw/excalidraw` package, follow the 
 1. Install the dependencies
 
    ```bash
-   cd packages/excalidraw && yarn
+   yarn
    ```
 
 2. Start the example app
 
    ```bash
-   yarn start
+   yarn start:example
    ```
 
    [http://localhost:3001](http://localhost:3001) will open in your default browser.
